<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@null"
            android:src="@drawable/miu_logo" />

        <TextView
            style="@style/MyTextView.XLarge"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in_to_your_account"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            style="@style/MyTextView.Medium"
            android:layout_marginTop="20dp"
            android:text="@string/email_address" />

        <EditText
            android:id="@+id/etEmail"
            style="@style/MyEditText.Medium"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:autofillHints="none"
            android:background="@drawable/drawable_edittext"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

        <TextView
            style="@style/MyTextView.Medium"
            android:layout_marginTop="10dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/MyEditText.Medium"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:autofillHints="none"
            android:background="@drawable/drawable_edittext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

        <TextView
            android:id="@+id/tvForgotPassword"
            style="@style/MyTextView"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/forgot_password"
            android:textAlignment="textEnd"
            android:textColor="#00BCD4" />

        <Button
            android:id="@+id/btnSignIn"
            style="@style/MyButton"
            android:layout_marginTop="10dp"
            android:background="@drawable/drawable_button"
            android:text="@string/sign_in" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerInParent="true"
                android:background="@color/gray" />

            <TextView
                style="@style/MyTextView.Medium"
                android:layout_width="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/background"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/don_t_have_an_account" />
        </RelativeLayout>

        <Button
            android:id="@+id/btnCreateAccount"
            style="@style/MyButton"
            android:layout_marginTop="10dp"
            android:background="@drawable/drawable_edittext"
            android:text="@string/create_an_account"
            android:textColor="@color/black" />
    </LinearLayout>

</ScrollView>